# Projeto_AetherOS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  justfile
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  clippy.yml  docs.yml  fmt.yml
assets/diagrams/: README.md
assets/screenshots/: README.md
boot/loader/: README.md
config/boot/: limine.cfg
config/linker/: linker.ld
config/qemu/: debug.mk  default.mk
crates/aether-abi/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs  shell.rs
kernel/src/arch/x86_64/: apic.rs  boot.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  paging.rs  pit.rs  serial.rs  vga.rs
kernel/src/arch/x86_64/cpu/: cpuid.rs  mod.rs  registers.rs
kernel/src/core/: error.rs  init.rs  logger.rs  mod.rs  panic.rs
kernel/src/drivers/: framebuffer.rs  keyboard.rs  mod.rs  serial.rs  storage.rs  timer.rs
kernel/src/fs/: initramfs.rs  mod.rs  vfs.rs
kernel/src/memory/: address_space.rs  frame_allocator.rs  heap.rs  mapper.rs  mod.rs
kernel/src/sync/: once.rs  spin.rs
kernel/src/syscall/: handlers.rs  mod.rs  table.rs
kernel/src/task/: context.rs  image.rs  mod.rs  process.rs  scheduler.rs
kernel/src/utils/: macros.rs
kernel/tests/: boot.rs  interrupts.rs  memory.rs
scripts/: boot-check.ps1  boot-check.sh  run-qemu.ps1  run-qemu.sh  setup.ps1  setup.sh  shell-check.ps1  shell-check.sh  test.ps1  test.sh
(+54 files in other folders)
