[package]
name = "aether-kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aether-kernel"
path = "src/main.rs"

[dependencies]
aether-bootinfo = { path = "../crates/aether-bootinfo" }
aether-sync = { path = "../crates/aether-sync" }
bitflags.workspace = true
limine.workspace = true
log.workspace = true
spin.workspace = true
x86_64.workspace = true
